--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script>
             if ('serviceWorker' in navigator) {
                 window.addEventListener('load', function() {
-                    navigator.serviceWorker.register('/cocoguard_web/service-worker.js')
+                    navigator.serviceWorker.register('/service-worker.js')
                         .then(function(reg) { console.log('Service Worker registered!', reg); })
                         .catch(function(err) { console.log('Service Worker registration failed:', err); });
                 });
