fix: correct APK download link and admin dashboard URL

--- a/pages/download.html
+++ b/pages/download.html
@@ -321,7 +321,7 @@
         <div class="download-card">
             <h2>Download for Android</h2>
             <p class="subtitle">Get CocoGuard on your mobile device</p>
-            <a href="https://github.com/maynardermita77-lang/cocoguard/releases/download/v1.0.0/cocoguard-v1.0.0.apk" class="download-btn" id="downloadBtn">
+            <a href="https://github.com/maynardermita77-lang/cocoguard/releases/download/v1.0.0/app-release.apk" class="download-btn" id="downloadBtn">
                 <svg viewBox="0 0 24 24"><path d="M5 20h14v-2H5v2zm7-18L5.33 9h3.67v4h4V9h3.67L12 2z" transform="rotate(180 12 12)"/></svg>
                 Download APK
             </a>
@@ -375,7 +375,7 @@
 
         <!-- Footer Link -->
         <div class="footer-link">
-            <a href="../index.html">Admin Dashboard &rarr;</a>
+            <a href="https://cocoguard-web.pages.dev/">Admin Dashboard &rarr;</a>
         </div>
 
     </div>
